# MultiProcessLinux

./: CMakeLists.txt  README.md
Gauss/: CMakeLists.txt
Gauss/inc/: gauss.h
Gauss/src/: gauss.cpp
src/: main.cpp
